# igraph-steiner-tree

./: README.md  pyproject.toml
src/igraph_steiner_tree/: __init__.py
test/: test_random_graph.py
